--- a/alis.conf
+++ b/alis.conf
@@ -12,7 +12,7 @@
 ## LOG_TRACE outputs the comands executed.
 ## LOG_FILE generates a log file with the commands executed and output generated during installation.
 ### The log file is saved to /var/log/alis.log.
-KEYS="es"
+KEYS="en"
 LOG_TRACE="true"
 LOG_FILE="false"
 
@@ -31,7 +31,7 @@ LOG_FILE="false"
 ### "custom" value allows to use a custom parted partition script.
 ### "manual" allows to specify which existing partitions are used for boot partition and root partition.
 ## PARTITION_MOUNT_POINTS mount points, partition number and directory, to mount from DEVICE.
-DEVICE="auto !/dev/sda !/dev/nvme0n1 !/dev/vda !/dev/mmcblk0" # sata nvme mmc (single)
+DEVICE="!auto /dev/sdc !/dev/nvme0n1 !/dev/vda !/dev/mmcblk0" # sata nvme mmc (single)
 DEVICE_TRIM="true"
 LVM="false"
 LUKS_PASSWORD=""
@@ -64,10 +64,10 @@ PING_HOSTNAME="mirrors.kernel.org"
 ## KERNELS_COMPRESSION selects the algorithm for kernel compression.
 ## KERNELS_PARAMETERS specific kernel parameters to set on boot. eg. iommu=soft
 REFLECTOR="false"
-REFLECTOR_COUNTRIES=("Spain")
+REFLECTOR_COUNTRIES=("America")
 PACMAN_MIRROR="https://mirrors.kernel.org/archlinux/\$repo/os/\$arch"
 PACMAN_PARALLEL_DOWNLOADS="true"
-KERNELS="!linux-lts !linux-lts-headers !linux-hardened !linux-hardened-headers !linux-zen !linux-zen-headers" # (multiple)
+KERNELS="linux-lts linux-lts-headers !linux-hardened !linux-hardened-headers !linux-zen !linux-zen-headers" # (multiple)
 KERNELS_COMPRESSION="!gzip !bzip2 !lzma !xz !lzop !lz4 zstd"
 KERNELS_PARAMETERS="!iommu=soft !nvme_load=YES"
 
@@ -84,7 +84,7 @@ AUR_PACKAGE="paru-bin !yay-bin !paru !yay !aurman" # (single)
 ## DISPLAY_DRIVER_DDX add DDX driver which provides 2D acceleration in Xorg.
 ## VULKAN add support for Vulkan.
 ## DISPLAY_DRIVER_HARDWARE_VIDEO_ACCELERATION, DISPLAY_DRIVER_HARDWARE_VIDEO_ACCELERATION_INTEL add support for hardware video acceleration
-DISPLAY_DRIVER="auto !intel !amdgpu !ati !nvidia !nvidia-lts !nvidia-dkms !nvidia-470xx-dkms !nvidia-390xx-dkms !nvidia-340xx-dkms !nouveau" # (single)
+DISPLAY_DRIVER="!auto !intel !amdgpu !ati !nvidia !nvidia-lts nvidia-dkms !nvidia-470xx-dkms !nvidia-390xx-dkms !nvidia-340xx-dkms !nouveau" # (single)
 KMS="true"
 FASTBOOT="true"
 FRAMEBUFFER_COMPRESSION="true"
@@ -98,24 +98,24 @@ DISPLAY_DRIVER_HARDWARE_VIDEO_ACCELERATION_INTEL="intel-media-driver !libva-inte
 ## KEYLAYOUT, KEYMODEL, KEYVARIANT, KEYOPTIONS see https://wiki.archlinux.org/title/X_keyboard_extension#Preset_configuration
 ## KEYMAP, FONT, FONT_MAP see https://man.archlinux.org/man/vconsole.conf.5
 ## ROOT_PASSWORD root user password. If "ask" password alis asks for a secure password.
-TIMEZONE="/usr/share/zoneinfo/Europe/Madrid"
-LOCALES=("es_ES.UTF-8 UTF-8" "en_US.UTF-8 UTF-8")
-LOCALE_CONF=("LANG=es_ES.UTF-8" "LANGUAGE=es_ES:es:en_US:en")
-KEYLAYOUT="es"
+TIMEZONE="/usr/share/zoneinfo/America/chicago"
+LOCALES=("en_US.UTF-8 UTF-8")
+LOCALE_CONF=("LANG=en_US.UTF-8")
+KEYLAYOUT="en"
 KEYMODEL=""
 KEYVARIANT=""
 KEYOPTIONS=""
-KEYMAP="KEYMAP=es"
+KEYMAP="KEYMAP=en"
 FONT=""
 FONT_MAP=""
-HOSTNAME="archlinux"
+HOSTNAME="sypher"
 ROOT_PASSWORD="ask"
 ROOT_PASSWORD_RETYPE="ask"
 
 # user
 ## USER_NAME, USER_PASSWORD Regular user to create in the system. A password must be specified, if "ask" password alis asks for a secure password.
 ## ADDITIONAL_USERS is an array of additional users to create in the system, if "ask" password alis asks for a secure password.
-USER_NAME="picodotdev"
+USER_NAME="matt"
 USER_PASSWORD="ask"
 USER_PASSWORD_RETYPE="ask"
 ADDITIONAL_USERS=() # eg. ("user1=password1" "user2=password2")
@@ -124,7 +124,7 @@ ADDITIONAL_USERS=() # eg. ("user1=password1" "user2=password2")
 ### SYSTEMD_HOMED "true" value requires interactivity to set user password
 SYSTEMD_HOMED="false"
 SYSTEMD_HOMED_STORAGE="!auto !luks !subvolume directory !fscrypt !cifs"
-SYSTEMD_HOMED_STORAGE_LUKS_TYPE="auto !ext4 !btrfs !xfs"
+SYSTEMD_HOMED_STORAGE_LUKS_TYPE="!auto ext4 !btrfs !xfs"
 SYSTEMD_HOMED_STORAGE_CIFS_DOMAIN=""
 SYSTEMD_HOMED_STORAGE_CIFS_SERVICE=""
 
@@ -139,7 +139,7 @@ MODULES="!vmd !tpm"
 # bootloader
 ## BOOTLOADER system boot loader.
 ### With auto value grub is used for BIOS system, systemd for UEFI system.
-BOOTLOADER="auto !grub !refind !systemd !efistub" # (single)
+BOOTLOADER="!auto grub !refind !systemd !efistub" # (single)
 
 # shell
 ## CUSTOM_SHELL configures an alternative custom shell interpreter.
@@ -148,8 +148,8 @@ CUSTOM_SHELL="bash !zsh !dash !fish" # (single)
 # desktop
 ## DESKTOP_ENVIRONMENT desktop environment to install.
 ## DISPLAY_MANAGER display manager to install and enable. With auto a default DM will be choosed based on the selected DE.
-DESKTOP_ENVIRONMENT="!gnome !kde !xfce !mate !cinnamon !lxde !i3-wm !i3-gaps !deepin !budgie !bspwm !awesome !qtile !openbox !leftwm !dusk" # (single)
-DISPLAY_MANAGER="auto !gdm !sddm !lightdm !lxdm" # (single)
+DESKTOP_ENVIRONMENT="!gnome !kde xfce !mate !cinnamon !lxde !i3-wm !i3-gaps !deepin !budgie !bspwm !awesome !qtile !openbox !leftwm !dusk" # (single)
+DISPLAY_MANAGER="!auto !gdm !sddm lightdm !lxdm" # (single)
 
 # packages
 ## PACKAGES_MULTILIB configures multilib repository for pacman and install multilib packages for display driver.
@@ -177,4 +177,5 @@ SYSTEMD_UNITS=""
 # reboot
 ## REBOOT on installation end reboots the system automatically. If "false" no reboot is performed and the user must do it explicitly.
 REBOOT="true"
+
 
